# GenshinLLKGame

./: .gitignore  components.d.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts  前端介绍.md
backenCode/: CMakeLists.txt
backenCode/GridDataFile/: difficult.txt  easy.txt
backenCode/src/: DrawPath.cpp  DrawPath.h  GameFeature.cpp  GameFeature.h  GameManager.cpp  GameManager.h  ImageData.h  MatchChecker.cpp  MatchChecker.h  User.h  handleData.cpp  handleData.h  main.cpp
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/assets/: main.css
src/router/: index.ts
src/store/: counter.ts
src/views/: ezgame.vue  hdgame.vue  login.vue  select.vue
src/views/games/: 1.vue  2.vue  3.vue  4.vue
